2003-01-25  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped the version to 2.0.0

	* gmime/gmime-filter-html.c (writeln): Read the stream as UTF-8
	rather than 8bit so that we can properly write out unicode
	entities.

2002-12-17  Jeffrey Stedfast  <fejj@ximian.com>

	Build fixes for G_DISABLE_DEPRECATED

	* gmime/gmime-param.c (encode_param): Replace calls to
	g_string_sprintfa() with g_string_append_printf() since the former
	is marked as being deprecated.
	(param_list_format): Same.

	* gmime/gmime-utils.c (rfc2047_encode_word): Here too.

2002-12-16  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped the version to 1.90.8

	* doc/gmime-doc.sgml: Added a section for GMimeFilterMd5.

	* doc/gmime-sections.txt: Added a section on GMimeFilterMd5.

	* tests/test-parser.c (print_mime_struct): Validate Content-Md5
	headers.

	* gmime/gmime-part.c (g_mime_part_set_content_md5): Rewritten to
	use the md5 filter and also to do things the right way by
	converting textual parts to their canonical CRLF form.
	(g_mime_part_verify_content_md5): Same.

	* gmime/gmime-filter-md5.[c,h]: New filter to compute the md5
	digest of a stream passed through it.

2002-12-11  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-message.c (g_mime_message_get_body): Reworked the
	logic a bit to properly handle multipart/alternative.

2002-12-10  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped the version to 1.90.7

2002-12-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/url-scanner.c: Use our own masking table since we need it
	atoms to be slightly different. There's a few more chars we want
	to restrict. Also has the benefit of being easier to split out if
	someone else wants to use it.
	(g_url_addrspec_end): Fixed to not be fooled in the case where the
	address is followed immediately by a period.
	(g_url_web_end): Made more robust.
	(g_url_scanner_scan): Oops. We need to set the match->pattern